{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 21,
  "lineage": "599111f2-0f29-4713-9477-2f0a91c1d0fa",
  "resources": [
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995723011204:security-group/sg-023f031adae1b4cb1",
            "description": "Security group for my VPC",
            "egress": [],
            "id": "sg-023f031adae1b4cb1",
            "ingress": [],
            "name": "my-security-group-20260415074240466400000001",
            "name_prefix": "my-security-group-",
            "owner_id": "995723011204",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group"
            },
            "tags_all": {
              "Name": "my-security-group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0dfbb1034d509ea7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "995723011204",
            "id": "sg-023f031adae1b4cb1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995723011204:network-acl/acl-0d7470bfc9d707b50",
            "default_network_acl_id": "acl-0d7470bfc9d707b50",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d7470bfc9d707b50",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "995723011204",
            "region": "us-east-1",
            "subnet_ids": null,
            "tags": {
              "Name": "my-terraform-vpc-default"
            },
            "tags_all": {
              "Name": "my-terraform-vpc-default"
            },
            "vpc_id": "vpc-0dfbb1034d509ea7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995723011204:route-table/rtb-0ba9ea0c631abb684",
            "default_route_table_id": "rtb-0ba9ea0c631abb684",
            "id": "rtb-0ba9ea0c631abb684",
            "owner_id": "995723011204",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "my-terraform-vpc-default"
            },
            "tags_all": {
              "Name": "my-terraform-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dfbb1034d509ea7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995723011204:security-group/sg-0a77dee6487647e9c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a77dee6487647e9c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "995723011204",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-terraform-vpc-default"
            },
            "tags_all": {
              "Name": "my-terraform-vpc-default"
            },
            "vpc_id": "vpc-0dfbb1034d509ea7f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:995723011204:vpc/vpc-0dfbb1034d509ea7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0d7470bfc9d707b50",
            "default_route_table_id": "rtb-0ba9ea0c631abb684",
            "default_security_group_id": "sg-0a77dee6487647e9c",
            "dhcp_options_id": "dopt-0649db602ce6ff2c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfbb1034d509ea7f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba9ea0c631abb684",
            "owner_id": "995723011204",
            "region": "us-east-1",
            "tags": {
              "Name": "my-terraform-vpc"
            },
            "tags_all": {
              "Name": "my-terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "995723011204",
            "id": "vpc-0dfbb1034d509ea7f",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}